# core

./: .gitignore  CMakeLists.txt  README.md  pisces
chotkeys/: application.cpp  application.h  hotkeys.cpp  hotkeys.h  main.cpp
clipboard/: CMakeLists.txt  clipboard.cpp  clipboard.h  main.cpp
cpufreq/: CMakeLists.txt  com.pisces.cpufreq.pkexec.policy.in  main.cpp
debian/: changelog  control  copyright  postinst  prerm
gmenuproxy/: CMakeLists.txt  dbusmenuadaptor.cpp  dbusmenuadaptor.h  pisces-gmenuproxy.service.in
notificationd/: CMakeLists.txt  application.cpp  application.h  com.pisces.Notification.xml  historymodel.cpp  historymodel.h  main.cpp  notification.cpp  notification.h  notificationpopup.cpp  notificationpopup.h  notificationserver.cpp  notificationserver.h  notificationsmodel.cpp  notificationsmodel.h  notificationwindow.cpp  notificationwindow.h  screenhelper.cpp  screenhelper.h  settings.cpp  settings.h  utils.cpp  utils.h
polkit-agent/: CMakeLists.txt  dialog.cpp  dialog.h  main.cpp  pisces-polkit-agent.desktop  polkitagentlistener.cpp  polkitagentlistener.h
powerman/: CMakeLists.txt  application.cpp  application.h  com.pisces.PowerManager.xml  dimdisplayaction.cpp  dimdisplayaction.h  idlemanager.cpp  idlemanager.h  main.cpp
screen-brightness/: CMakeLists.txt  brightnesshelper.cpp  brightnesshelper.h  com.pisces.brightness.pkexec.policy.in  main.cpp
sddm-helper/: CMakeLists.txt  com.pisces.sddm.helper.pkexec.policy.in  main.cpp
session/: main.cpp  (+12 more)
shutdown-ui/: CMakeLists.txt  IconButton.qml  actions.cpp  actions.h  main.cpp  main.qml
(+38 files in other folders)
